--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
     <section>
       <h2>Contact</h2>
-      <p>Let's connect! Reach us at <a href="mailto:community4obby@gmail.com">community4obby@gmail.com</a> or follow us on <a href="https://github.com/yourusername" target="_blank">GitHub</a>.</p>
+      <p>Let's connect! Reach us at <a href="mailto:community4obby@gmail.com">community4obby@gmail.com</a> or follow us on <a href="https://github.com/TeamObbyYT" target="_blank">GitHub</a>.</p>
     </section>
   </main>
 
