--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <body>
 
   <header>
-    <h1>Hello, We're TeamObby</h1>
+    <h1>Hello! Welcome AboutMe!</h1>
     <p>Creative Developers | Tech Enthusiasts | Problem Solvers</p>
   </header>
 
