--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 <body>
 
   <header>
-    <h1>Hello! Welcome AboutMe!</h1>
-    <p>Creative Developers | Tech Enthusiasts | Problem Solvers</p>
+    <h1>Hello! Welcome to AboutMe!</h1>
+    <p>Power Of imagination | Creativity Model Blender</p>
   </header>
 
   <main>
@@ -74,12 +74,12 @@
     </section>
 
     <section>
-      <h2>Skills</h2>
+      <h2>Programme know/use</h2>
       <ul>
-        <li>HTML, CSS, JavaScript</li>
-        <li>React, Node.js</li>
-        <li>UI/UX Design</li>
-        <li>Responsive Design</li>
+        <li>Python</li>
+        <li>Blender</li>
+        <li>UI Game Designer </li>
+        <li>AI</li>
       </ul>
     </section>
 
@@ -90,7 +90,7 @@
   </main>
 
   <footer>
-    &copy; 2025 TeamObby. All rights reserved.
+    &copy; 2025 TeamObby. All rights reserved. Website live on GitHub.
   </footer>
 
 <script>
